cfl bp code. inv.docentry fixed. numbering is considered

--- a/LandedCosts/LandedCosts.csproj
+++ b/LandedCosts/LandedCosts.csproj
@@ -36,7 +36,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="ConverterLib_x64">
-      <HintPath>..\..\Invoice Income Correction\Invoice Income Correction\bin\Debug\ConverterLib_x64.dll</HintPath>
+      <HintPath>..\..\..\servicejournalentry\ServJEAP\ConverterLib_x64.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
